--- a/pweb_eCarSharing/packages.config
+++ b/pweb_eCarSharing/packages.config
@@ -29,6 +29,8 @@
   <package id="Microsoft.Owin.Security.Twitter" version="4.1.0" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
+  <package id="MySql.Data" version="6.10.9" targetFramework="net472" />
+  <package id="MySql.Data.Entity" version="6.10.9" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="popper.js" version="1.16.0" targetFramework="net472" />
