--- a/pweb_eCarSharing/pweb_eCarSharing.csproj
+++ b/pweb_eCarSharing/pweb_eCarSharing.csproj
@@ -208,6 +208,10 @@
     <Compile Include="Migrations\201912291654021_dbStart.designer.cs">
       <DependentUpon>201912291654021_dbStart.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202001021631467_belele.cs" />
+    <Compile Include="Migrations\202001021631467_belele.designer.cs">
+      <DependentUpon>202001021631467_belele.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\CarStation.cs" />
@@ -396,6 +400,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201912291654021_dbStart.resx">
       <DependentUpon>201912291654021_dbStart.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202001021631467_belele.resx">
+      <DependentUpon>202001021631467_belele.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
