--- a/pweb_eCarSharing/pweb_eCarSharing.csproj
+++ b/pweb_eCarSharing/pweb_eCarSharing.csproj
@@ -212,6 +212,10 @@
     <Compile Include="Migrations\202001021631467_belele.designer.cs">
       <DependentUpon>202001021631467_belele.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202001021934420_Modelo-Inicial.cs" />
+    <Compile Include="Migrations\202001021934420_Modelo-Inicial.designer.cs">
+      <DependentUpon>202001021934420_Modelo-Inicial.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\CarStation.cs" />
@@ -403,6 +407,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202001021631467_belele.resx">
       <DependentUpon>202001021631467_belele.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202001021934420_Modelo-Inicial.resx">
+      <DependentUpon>202001021934420_Modelo-Inicial.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
