--- a/pweb_eCarSharing/pweb_eCarSharing.csproj
+++ b/pweb_eCarSharing/pweb_eCarSharing.csproj
@@ -199,6 +199,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\eCarSharingController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Global.asax.cs">
@@ -386,6 +387,13 @@
     <Content Include="Scripts\popper.js.map" />
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
+    <Content Include="Views\eCarSharing\Main.cshtml" />
+    <Content Include="Views\eCarSharing\CarStationList.cshtml" />
+    <Content Include="Views\eCarSharing\VehicleList.cshtml" />
+    <Content Include="Views\eCarSharing\RentVehicle.cshtml" />
+    <Content Include="Views\eCarSharing\ListRentalData.cshtml" />
+    <Content Include="Views\eCarSharing\UsageStats.cshtml" />
+    <Content Include="Views\eCarSharing\ChangeRentalData.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
