fully working database and added reservations to db config file

--- a/pweb_eCarSharing/Web.config
+++ b/pweb_eCarSharing/Web.config
@@ -9,7 +9,7 @@
   <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-pweb_eCarSharing-20191216103352.mdf;Initial Catalog=aspnet-pweb_eCarSharing-20191216103352;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name="DatabaseConnection3" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-pweb_eCarSharing.mdf;Initial Catalog=aspnet-pweb_eCarSharing;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
