--- a/pweb_eCarSharing/pweb_eCarSharing.csproj
+++ b/pweb_eCarSharing/pweb_eCarSharing.csproj
@@ -389,6 +389,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Content\App_LocalResources\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
