--- a/pweb_eCarSharing/pweb_eCarSharing.csproj
+++ b/pweb_eCarSharing/pweb_eCarSharing.csproj
@@ -208,18 +208,21 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202001031619125_migration1.cs" />
-    <Compile Include="Migrations\202001031619125_migration1.designer.cs">
-      <DependentUpon>202001031619125_migration1.cs</DependentUpon>
+    <Compile Include="Migrations\202001041115438_migration1.cs" />
+    <Compile Include="Migrations\202001041115438_migration1.designer.cs">
+      <DependentUpon>202001041115438_migration1.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\CarStation.cs" />
+    <Compile Include="Models\CarStationViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Reservation.cs" />
-    <Compile Include="Models\User.cs" />
+    <Compile Include="Models\ReservationViewModels.cs" />
+    <Compile Include="Models\UserNib.cs" />
     <Compile Include="Models\Vehicle.cs" />
+    <Compile Include="Models\VehiclesViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -384,11 +387,11 @@
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Views\eCarSharing\Main.cshtml" />
     <Content Include="Views\CarStation\CarStationList.cshtml" />
-    <Content Include="Views\Vehicle\VehicleList.cshtml" />
-    <Content Include="Views\Reservation\RentVehicle.cshtml" />
+    <Content Include="Views\Vehicle\AvailableVehicleList.cshtml" />
     <Content Include="Views\Reservation\ListRentalData.cshtml" />
     <Content Include="Views\Reservation\UsageStats.cshtml" />
     <Content Include="Views\Reservation\ChangeRentalData.cshtml" />
+    <Content Include="Views\Vehicle\InUseVehicleList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -406,8 +409,8 @@
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202001031619125_migration1.resx">
-      <DependentUpon>202001031619125_migration1.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202001041115438_migration1.resx">
+      <DependentUpon>202001041115438_migration1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
