--- a/pweb_eCarSharing/pweb_eCarSharing.csproj
+++ b/pweb_eCarSharing/pweb_eCarSharing.csproj
@@ -400,6 +400,9 @@
     <Content Include="Views\Vehicle\AddVehicle.cshtml" />
     <Content Include="Views\Vehicle\ChangeVehicleData.cshtml" />
     <Content Include="Views\CarStation\AddCarStation.cshtml" />
+    <Content Include="Views\eCarSharing\Vehicle.cshtml" />
+    <Content Include="Views\eCarSharing\CarStation.cshtml" />
+    <Content Include="Views\eCarSharing\Reservation.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
