inUse works, changed minor details, separated views from admin to regular user

--- a/pweb_eCarSharing/pweb_eCarSharing.csproj
+++ b/pweb_eCarSharing/pweb_eCarSharing.csproj
@@ -208,9 +208,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202001051300019_migration1.cs" />
-    <Compile Include="Migrations\202001051300019_migration1.designer.cs">
-      <DependentUpon>202001051300019_migration1.cs</DependentUpon>
+    <Compile Include="Migrations\202001051732336_migration1.cs" />
+    <Compile Include="Migrations\202001051732336_migration1.designer.cs">
+      <DependentUpon>202001051732336_migration1.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -402,6 +402,7 @@
     <Content Include="Views\CarStation\RemCarStation.cshtml" />
     <Content Include="Views\Vehicle\RemVehicle.cshtml" />
     <Content Include="Views\Reservation\RemRentalData.cshtml" />
+    <Content Include="Views\Reservation\ListUserRentalData.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -419,8 +420,8 @@
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202001051300019_migration1.resx">
-      <DependentUpon>202001051300019_migration1.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202001051732336_migration1.resx">
+      <DependentUpon>202001051732336_migration1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
